# drl_local_planner_ros_stable_baselines

./: .gitignore  .rosinstall  LICENSE  README.md  requirements.txt
docker/: Dockerfile  docker-compose.yml
example_agents/: ppo2_35_8001000.pkl
example_agents/ppo2_1_raw_data_cont_0/: ppo2_1_raw_data_cont_0.pkl
example_agents/ppo2_1_raw_data_disc_0/: ppo2_1_raw_data_disc_0.pkl
example_agents/ppo2_3_raw_data_disc_0/: ppo2_3_raw_data_disc_0.pkl
flatland_setup/: CMakeLists.txt  package.xml
flatland_setup/maps/map_middle_complexity/: world.yaml
flatland_setup/maps/no_map/: map.yaml
flatland_setup/objects/: cylinder.model.yaml  palett.model.yaml  person.model.yaml  wagon.model.yaml
flatland_setup/robot/: robot1.model.yaml
rl_agent/: CMakeLists.txt  package.xml  setup.py
rl_agent/config/: path_config.ini
rl_agent/include/rl_agent/: laser_scan_merger.h  tf_python.h
rl_agent/launch/: run_1_img_disc.launch  run_1_raw_cont.launch  run_1_raw_disc.launch  run_3_raw_disc.launch  run_ppo2_agent.launch  run_ppo_agent.launch
rl_agent/scripts/evaluation/: analysis.py  evaluate_agent.py  qualitative_plot.py  save_test_episodes.py
rl_agent/scripts/run_scripts/: run_ppo.py
rl_agent/scripts/train_scripts/: train_ppo.py  train_ppo1.py  train_ppo2.py
rl_agent/src/: laser_scan_merger.cpp  tf_python.cpp
rl_agent/src/rl_agent/: common_custom_policies.py
rl_agent/src/rl_agent/env_utils/: debug_ros_env.py  reward_container.py  state_collector.py  task_generator.py
rl_agent/src/rl_agent/env_wrapper/: ros_env.py  ros_env_cont_img.py  ros_env_cont_img_vel.py  ros_env_cont_raw_data.py  ros_env_cont_raw_scan_prep_wp.py  ros_env_disc_img.py  ros_env_disc_img_vel.py  ros_env_disc_raw_data.py  ros_env_disc_raw_scan_prep_wp.py  ros_env_img.py  ros_env_img_vel.py  ros_env_raw_data.py  ros_env_raw_scan_prep_wp.py
rl_agent/src/rl_agent/evaluation/: Analysis_eval.py  Evaluation.py
rl_agent/start_scripts/: entrypoint_ppo2.sh  ppo2_training.sh  ppo_training.sh  ros.sh
rl_agent/start_scripts/training_params/: ppo2_params.csv
rl_bringup/: CMakeLists.txt  package.xml
rl_bringup/config/: costmap_common_params.yaml  dwa_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  movebase_params.yaml  path_config.ini  path_config_docker.ini  rl_common.yaml  rl_params_img.yaml  rl_params_img_dyn.yaml  rl_params_scan.yaml
rl_bringup/launch/: rviz.launch  setup.launch
rl_bringup/launch/sub_launch/: dummy_localization.launch  flatland.launch  move_base.launch  navigation.launch  pedestrians_only.launch  simulation.launch
rl_bringup/rviz/: robot_navigation.rviz
rl_bringup/src/: toggle_setup_init.cpp
rl_local_planner/: CMakeLists.txt  blp_plugin.xml  package.xml
rl_local_planner/include/rl_local_planner/: image_generator.h  local_planner_dummy.h  rl_local_planner.h  safety_stop.h  wp_generator.h
rl_local_planner/src/: image_generator.cpp  local_planner_dummy.cpp  rl_local_planner.cpp  safety_stop.cpp  wp_generator.cpp
rl_msgs/: CMakeLists.txt  package.xml
rl_msgs/msg/: Waypoint.msg
rl_msgs/srv/: MergeScans.srv  SetPath.srv  StateImageGenerationSrv.srv
start_scripts/: entrypoint_ppo.sh  entrypoint_ppo2.sh  ppo2_training.sh  ppo_training.sh  ros.sh  start_roscore.sh
start_scripts/training_params/: ppo2_params.csv  ppo_params.csv  training_maps.csv
