<?xml version="1.0"?>
<package format="2">
  <name>rl_msgs</name>
  <version>1.1.1</version>
  <description>The rl_msgs package</description>
  <license>BSD</license>
  <maintainer email="ronja@todo.todo">ronja</maintainer>

  <author>Ronja Gueldenring</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
